welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:12: error: '(' expected but identifier found.
	if !estFacemur() {
           ^Balin:28: error: illegal start of simple expression
 }
 ^